add requirements file

--- a/test_notebook.ipynb
+++ b/test_notebook.ipynb
@@ -90,7 +90,9 @@
    "id": "b16d0f32-b399-4e06-ac11-4954dd5f0141",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(pandas.__version__"
+   ]
   }
  ],
  "metadata": {
